# attendance-backend

./: .gitignore  CODE_QUALITY_REPORT.md  DEMO_GUIDE.md  DEMO_PLAN.md  README.md  attendance-app.dump  cookie.txt  cookie_pm001.txt  cookie_tr001.txt  cookies.txt  migration_addresses.sql  package.json  pnpm-workspace.yaml  shift_creation.md  shift_preview.html
apps/backend/: .dockerignore  Dockerfile  cookies.txt  cookies_fresh.txt  package.json  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/auth/: dependencies.py  routes.py
apps/backend/app/core/: config.py  database.py  lifespan.py  limiter.py  logging.py  mongodb.py
apps/backend/app/features/: countries.py
apps/backend/app/features/admin/: routes.py
apps/backend/app/features/attendance/: __init__.py  admin_routes.py  routes.py  schemas.py
apps/backend/app/middleware/: active_employee.py  correlation.py  csrf.py  logging.py
apps/backend/app/models/: __init__.py  attendance.py  base.py  employee_master.py  holiday.py  leave.py  leave_balance.py  location.py  notification.py  office_location.py  recording.py  session.py  shift.py  shift_definition.py  system_setting.py
apps/backend/app/redmine/: routes.py  schemas.py  service.py
apps/backend/app/routes/: __init__.py  recordings.py
apps/backend/app/schemas/: __init__.py  auth.py  recording.py
apps/backend/app/services/: __init__.py  keycloak.py  session.py
apps/backend/app/utils/: __init__.py  audit.py  jwt.py  storage.py
apps/backend/scripts/: bootstrap_admin_employee.py  cookies.txt  log-cleanup.cron  seed_leaves.py
(+106 files in other folders)
